# STS-RL-Env

./: .gitignore  BUILD_GUIDE.md  CMakeLists.txt  README.md  output_debug.txt
.trae/documents/: 三层架构实现计划.md
.trae/rules/: pipeline.md  sts-leader.md  sts-rule.md
.trae/skills/run_pipeline/: SKILL.md  manifest.json  skill.json
.trae/skills/run_pipeline/rule/: complexity_criteria.md
.trae/skills/run_pipeline/templates/: direct_task.txt  phase1.txt  phase2.txt  phase2_retry.txt  phase3.txt  phase4.txt
docs/: API_DICTIONARY.md  ARCHITECTURE.md  地图生成系统详细分析.md
python/: sts_gym_wrapper.py  test_env.py  train_jawworm.py
src/: main.cpp
src/action/: AbstractAction.h  ActionManager.cpp  ActionManager.h  Actions.cpp  Actions.h  LambdaAction.cpp  LambdaAction.h  PlayerActions.cpp  PlayerActions.h
src/card/: AbstractCard.h  Cards.cpp  Cards.h
src/character/: Character.cpp  Character.h  Monster.cpp
src/character/monster/: JawWorm.cpp  JawWorm.h
src/core/: ForwardDeclarations.h  Queries.h  RandomManager.h  Types.h
src/engine/: GameEngine.cpp  GameEngine.h
src/event/: EventBus.h
src/flow/: CombatFlow.cpp  CombatFlow.h
src/gamestate/: GameState.cpp  GameState.h
src/intent/: AdaptiveBrain.cpp  AdaptiveBrain.h  FixedBrain.cpp  FixedBrain.h  Intent.cpp  Intent.h  IntentBrain.cpp  IntentBrain.h  RandomBrain.cpp  RandomBrain.h
src/intent/brains/: JawWormBrain.cpp  JawWormBrain.h
src/map/: MapGenerator.cpp  MapGenerator.h  MapRenderer.cpp  MapRenderer.h  MapTypes.h
src/potion/: AbstractPotion.h  Potion.cpp  Potion.h  Potions.cpp  Potions.h
src/power/: AbstractPower.h  Powers.cpp  Powers.h
src/relic/: AbstractRelic.cpp  AbstractRelic.h  Relics.cpp  Relics.h
src/rl/: STSEnv.cpp  STSEnv.h  pybind_module.cpp
src/rules/: BasicRules.cpp  BasicRules.h
src/state/: CombatState.cpp  CombatState.h  RunState.cpp  RunState.h
src/system/: ActionSystem.h  DeckSystem.cpp  DeckSystem.h
src/test/: TestCardSelection.cpp  TestDamagePipeline.cpp  TestFramework.h  TestMapRendererNew.cpp  TestMonster.cpp  TestPotionSystem.cpp  TestRandomDamageAction.cpp  TestVulnerableRelic.cpp  test_main.cpp
src/test/integration/: TestCombatFlow.cpp  TestFullRound.cpp
src/test/unit/: TestActionManager.cpp  TestCardSelection.cpp  TestDamagePipeline.cpp  TestDeckSystem.cpp  TestDeterminism.cpp  TestEventBus.cpp  TestLambdaAction.cpp  TestMapRenderer.cpp  TestMonster.cpp  TestPotionSystem.cpp  TestRandomDamageAction.cpp  TestVulnerableRelic.cpp
src/utils/: Logger.h
